# smz3t

./: README.md  meson.build
images/: gen_items.sh  items.gresource.xml
src/: dungeongrid.cc  dungeongrid.h  hyrulegrid.cc  hyrulegrid.h  itembox.cc  itembox.h  items.c  main.cc  rewardbox.cc  rewardbox.h  rewardgrid.cc  rewardgrid.h  zebesgrid.cc  zebesgrid.h
